--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "rest4plc",
   "version": "1.0.0",
   "description": "",
-  "main": "api/app/bin/www.ts",
+  "main": "src/app/bin/www.ts",
   "scripts": {
-    "start": "node api/app/bin/www.ts",
-    "dev": "nodemon",
-    "debug": "nodemon --inspect",
-    "debug:start": "node --inspect -r ts-node/register api/app/bin/www.ts",
+    "start": "node src/app/bin/www.ts",
+    "debug": "nodemon src/app/bin/www.ts",
     "test": "echo \\\"Erro: não há testes especificados\\\" && exit 1",
     "lint": "eslint . --ext .ts",
     "lint-and-fix": "eslint . --ext .ts --fix"
@@ -26,13 +24,14 @@
     "cookie-parser": "^1.4.5",
     "debug": "^4.1.1",
     "dotenv-safe": "^8.2.0",
+    "@types/express": "^4.17.6",
     "express": "^4.17.1",
+    "@types/http-errors": "^1.6.3",
     "http-errors": "^1.7.3",
-    "mongoose": "^5.9.15"
+    "mongoose": "^5.9.15",
+    "node-opc-da": "^1.0.6"
   },
   "devDependencies": {
-    "@types/express": "^4.17.6",
-    "@types/http-errors": "^1.6.3",
     "@types/node": "^14.0.13",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
