--- a/package.json
+++ b/package.json
@@ -24,20 +24,23 @@
     "cookie-parser": "^1.4.5",
     "debug": "^4.1.1",
     "dotenv-safe": "^8.2.0",
-    "@types/express": "^4.17.6",
     "express": "^4.17.1",
-    "@types/http-errors": "^1.6.3",
     "http-errors": "^1.7.3",
     "mongoose": "^5.9.15",
+    "node-dcom": "^1.0.8",
     "node-opc-da": "^1.0.6"
   },
   "devDependencies": {
+    "@types/express": "^4.17.6",
+    "@types/http-errors": "^1.6.3",
     "@types/node": "^14.0.13",
+    "@types/pug": "^2.0.4",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "eslint": "^7.2.0",
     "eslint-plugin-shopify": "^35.1.0",
     "nodemon": "^2.0.4",
+    "pug": "^3.0.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
   },
