Implementando  - Leitura TAGs OPC

--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ SECRET_JWT='mysecret'
 EXPIRE_USER_TIME=36000
 
 #OPC DA cliente to server configurations
-OPCDA_ADDRESS='IP/Hostname',
-OPCDA_DOMAIN='Domain/Hostname',
-OPCDA_USER='User_that_have_permission_to_access_OPC_DA_Server',
-OPCDA_PASS='password',
-OPCDA_CLSID='DCOM_class_id_to_OPC_DA_Server',
+OPCDA_ADDRESS='IP/Hostname'
+OPCDA_DOMAIN='Domain/Hostname'
+OPCDA_USER='User_that_have_permission_to_access_OPC_DA_Server'
+OPCDA_PASS='password'
+OPCDA_CLSID='DCOM_class_id_to_OPC_DA_Server'
