--- a/package.json
+++ b/package.json
@@ -25,20 +25,21 @@
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "http-errors": "^1.7.3",
-    "mongoose": "^5.9.15",
     "node-dcom": "^1.0.8",
     "node-opc-da": "^1.0.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/http-errors": "^1.6.3",
-    "@types/node": "^14.0.13",
+    "@types/mongoose": "^5.7.27",
+    "@types/node": "^14.0.14",
     "@types/pug": "^2.0.4",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
     "debug": "^4.1.1",
-    "eslint": "^7.2.0",
+    "eslint": "^7.3.1",
     "eslint-plugin-shopify": "^35.1.0",
+    "mongoose": "^5.9.20",
     "nodemon": "^2.0.4",
     "pug": "^3.0.0",
     "ts-node": "^8.10.2",
